--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,17 @@
 .layout {
-    width: 1366px;
-    height: 768px;
-  
-    display: grid;
-    grid:
-      "sidebar body" auto
-      / auto 1fr;
-    gap: 8px;
-  }
-  
-  .sidebar { grid-area: sidebar; }
-  .body { grid-area: body; }
+  width: 1366px;
+  height: 768px;
+
+  display: grid;
+  grid:
+    "sidebar body" auto / auto 1fr;
+  gap: 8px;
+}
+
+.sidebar {
+  grid-area: sidebar;
+}
+
+.body {
+  grid-area: body;
+}
