--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,22 @@
-.layout {
-  width: 1366px;
-  height: 768px;
 
-  display: grid;
-  grid:
-    "sidebar body" auto / auto 1fr;
-  gap: 8px;
+*{
+  margin: 0;
+  padding: 0;
+  background-color: #000;
 }
 
-.sidebar {
-  grid-area: sidebar;
+.caja{
+  width: 50px;
+  height: 50px;
+  padding: 50px;
+  margin: 50px;
+  box-shadow: 4px 4px 4px 4px red;
+  border-radius: 5px;
+  animation: neon 3s ease infinite;
 }
 
-.body {
-  grid-area: body;
+@keyframes neon {
+  50%{
+    box-shadow: 4px 4px 8px blue;
+  }
 }
